--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.platen.syntaxparser</groupId>
-	<artifactId>de.platen.syntaxparser</artifactId>
-	<version>2.1.1-SNAPSHOT</version>
+	<artifactId>syntaxparser</artifactId>
+	<version>2.1.1</version>
 	<packaging>jar</packaging>
 
 	<properties>
