--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.platen.syntaxparser</groupId>
 	<artifactId>syntaxparser</artifactId>
-	<version>2.3.2-SNAPSHOT</version>
+	<version>2.4.0</version>
 	<packaging>jar</packaging>
 
 	<properties>
