--- a/anwendungshilfe/klassenablage/pom.xml
+++ b/anwendungshilfe/klassenablage/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.platen.syntaxparser.anwendungshilfe</groupId>
 	<artifactId>klassenablage</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
