--- a/anwendungshilfe/klassengenerator-maven-plugin/pom.xml
+++ b/anwendungshilfe/klassengenerator-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.platen.syntaxparser.anwendungshilfe</groupId>
 	<artifactId>klassengenerator-maven-plugin</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>maven-plugin</packaging>
 
     <name>klassengenerator-maven-plugin</name>
