--- a/anwendungshilfe/klassengenerierung/pom.xml
+++ b/anwendungshilfe/klassengenerierung/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>de.platen.syntaxparser</groupId>
             <artifactId>syntaxparser</artifactId>
-            <version>2.5.0</version>
+            <version>2.5.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
