--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>17</release>
+					<release>21</release>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -59,19 +59,22 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.11.0</version>
+            <!--<version>4.11.0</version>-->
+            <version>5.15.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
-            <version>4.10.0</version>
+            <!--<version>4.10.0</version>-->
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.10.0</version>
+            <!--<version>4.10.0</version>-->
+            <version>5.15.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
